# voicemic

./: .gitignore  README.md  SPEC.md
.github/workflows/: build-apk.yml  build-driver.yml  build-exe.yml
android-client/: gradlew  gradlew.bat  settings.gradle
android-client/app/: build.gradle  proguard-rules.pro
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/voicemic/app/: AudioEncoder.java  AudioStreamService.java  MainActivity.java  NetworkClient.java  Protocol.java  SettingsActivity.java
android-client/app/src/main/res/drawable/: ic_mic_foreground.xml
android-client/app/src/main/res/layout/: activity_main.xml
android-client/app/src/main/res/menu/: main_menu.xml
android-client/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android-client/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-client/app/src/main/res/values-night/: themes.xml
android-client/app/src/main/res/xml/: preferences.xml
driver/: CMakeLists.txt  adapter.cpp  common.h  minwave.cpp  voicemic_audio.inf  voicemic_audio.vcxproj
installer/: license.txt  voicemic.iss
pc-server/: audio_bridge.py  audio_player.py  config.py  gui.py  i18n.py  main.py  noise_filter.py  opus_decoder.py  protocol.py  requirements.txt  run.bat  server.py  tray_icon.py  usb_connect.bat  voicemic.spec
pc-server/lang/: de.json  en.json  es.json  fr.json  ja.json  ru.json  uk.json  zh.json
